# view-accounting-system

./: .gitignore  README.md
repo-mediafiles/: TECH.md  database.drawio
src/backend/: pyproject.toml
src/backend/scripts/: nvim_start.sh
src/backend/src/: main.py  manage.py
src/backend/src/core/: config.py
src/backend/src/management/: __init__.py  app.py  collector.py  executor.py  parser.py
src/backend/src/management/commands/: asgsgsg.py  base.py  echo.py  runserver.py
src/backend/src/utils/exceptions/: __init__.py  manage_exceptions.py
