[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lunev Dmitriy <dima.lunev14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
mypy = "^0.961"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
