[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lunev Dmitriy <dima.lunev14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
mypy = "^0.961"
ipython = "^8.4.0"
ormar = {extras = ["postgresql"], version = "^0.11.2"}
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
